@@ -72,19 +72,19 @@ def runner(app: LinOTPApp) -> FlaskCliRunner:
     "options,deleted,remaining,cleaned",
     [
         (
-            ["--max", 10, "--min", 5],
+            ["--max", 10, "--min", 5, "--export"],
             AUDIT_AMOUNT_ENTRIES - 5,
             5,
             True,
         ),
         (
-            ["--max", AUDIT_AMOUNT_ENTRIES, "--min", 5],
+            ["--max", AUDIT_AMOUNT_ENTRIES, "--min", 5, "--export"],
             0,
             AUDIT_AMOUNT_ENTRIES,
             False,
         ),
         (
-            ["--max", AUDIT_AMOUNT_ENTRIES - 1, "--min", 0],
+            ["--max", AUDIT_AMOUNT_ENTRIES - 1, "--min", 0, "--export"],
             AUDIT_AMOUNT_ENTRIES,
             0,
             True,
@@ -95,6 +95,7 @@ def runner(app: LinOTPApp) -> FlaskCliRunner:
                 AUDIT_AMOUNT_ENTRIES - 1,
                 "--min",
                 AUDIT_AMOUNT_ENTRIES - 1,
+                "--export",
             ],
             1,
             AUDIT_AMOUNT_ENTRIES - 1,
@@ -170,7 +171,6 @@ def test_audit_cleanup_disabled_export(
             "10",
             "--min",
             "10",
-            "--no-export",
             "--exportdir",
             str(export_dir),
         ],
@@ -207,6 +207,7 @@ def test_audit_cleanup_custom_export_dir(
             "10",
             "--min",
             "10",
+            "--export",
             "--exportdir",
             str(export_dir),
         ],
